--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
     "ejs": "^3.1.5",
     "express": "^4.17.1",
     "express-ejs-layouts": "^2.5.0",
+    "filepond": "^4.25.1",
     "mongoose": "^5.11.12",
-    "multer": "^1.4.2",
     "path": "^0.12.7"
   },
   "devDependencies": {
